feat: multimodal handling
BREAKING CHANGE: java 25 required