@@ -32,8 +32,12 @@ public final class LlamaTemplate extends MemorySegmentAware {
     super(llama_model_chat_template(llamaModel.segment, MemorySegment.NULL));
   }
 
-  public String applyTemplate(Arena arena, LlamaChatMessages messages, int nCtx) {
-    var templateBuffer = arena.allocateArray(ValueLayout.JAVA_CHAR, nCtx);
+  public String applyTemplate(
+    Arena arena,
+    LlamaChatMessages messages,
+    int nCtx
+  ) {
+    var templateBuffer = arena.allocate(ValueLayout.JAVA_CHAR, nCtx);
 
     int newLength = llama_chat_apply_template(
       segment,
@@ -45,15 +49,21 @@ public final class LlamaTemplate extends MemorySegmentAware {
     );
 
     if (newLength > nCtx) {
-      templateBuffer = arena.allocateArray(ValueLayout.JAVA_CHAR, newLength);
-      newLength =
-        llama_chat_apply_template(segment, messages.segment, messages.getMessages().size(), true, templateBuffer, newLength);
+      templateBuffer = arena.allocate(ValueLayout.JAVA_CHAR, newLength);
+      newLength = llama_chat_apply_template(
+        segment,
+        messages.segment,
+        messages.getMessages().size(),
+        true,
+        templateBuffer,
+        newLength
+      );
     }
 
     if (newLength < 0) {
       throw new IllegalStateException("failed to apply the chat template.");
     }
 
-    return templateBuffer.getUtf8String(0);
+    return templateBuffer.getString(0);
   }
 }
